<?xml version="1.0" encoding="utf-8"?>
<com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt_parent_ku"
    style="@style/RippleStyleBlack"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/spacing_mlarge"
    android:paddingTop="@dimen/spacing_middle"
    android:paddingRight="@dimen/spacing_mlarge"
    android:paddingBottom="@dimen/spacing_middle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_ku_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/title_news_category"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorTextAction"
                app:fontFamily="sans-serif-medium" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_type"
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="@dimen/spacing_large"
                    app:srcCompat="@drawable/ic_type_article"
                    app:tint="@color/grey_40" />

                <View
                    android:layout_width="@dimen/spacing_medium"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/txt_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/article_news"
                    android:textColor="@color/grey_40"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <View
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/featured_ku"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_round"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingTop="1dp"
                    android:paddingRight="@dimen/spacing_middle"
                    android:paddingBottom="2dp"
                    android:text="@string/FEATURED"
                    android:textColor="@android:color/white"
                    android:textSize="10sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/date_ku"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_news"
                    android:textColor="@color/grey_40"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="@dimen/spacing_large"
            android:layout_height="0dp" />

        <ImageView
            android:id="@+id/image_ku"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@color/overlay_dark_10"
            android:scaleType="centerCrop"
            android:contentDescription="@string/myname" />

    </LinearLayout>

</com.balysv.materialripple.MaterialRippleLayout>
